collapse back up. fixed font size issue

--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@
   font-weight: none;
   line-height: 1.55;
   outline: none;
-  font-size: 15px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Roboto', sans-serif;
@@ -552,11 +551,8 @@ p {
   cursor: pointer;
   padding: 10px;
   border: none;
-
   font-weight: none;
-
   outline: none;
-  font-size: 15px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Roboto', sans-serif;
